--- a/Src/TripleSix.Core/TripleSix.Core.csproj
+++ b/Src/TripleSix.Core/TripleSix.Core.csproj
@@ -5,6 +5,11 @@
     <PackageId>TripleSix.Core</PackageId>
     <Version>5.0.0</Version>
     <Authors>triplesix0209@gmail.com</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>../../Dist</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
