--- a/Src/TripleSix.Core/Templates/Projects/Identity/Src/TripleSix.Identity.Common/TripleSix.Identity.Common.csproj
+++ b/Src/TripleSix.Core/Templates/Projects/Identity/Src/TripleSix.Identity.Common/TripleSix.Identity.Common.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\editorconfig" Link=".editorconfig" />
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
