--- a/Src/TripleSix.Core/TripleSix.Core.csproj
+++ b/Src/TripleSix.Core/TripleSix.Core.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Templates\Projects\Identity\Src\TripleSix.Identity.Common\Helpers\PasswordHelper.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
