--- a/Src/TripleSix.AutoAdmin/TripleSix.AutoAdmin.csproj
+++ b/Src/TripleSix.AutoAdmin/TripleSix.AutoAdmin.csproj
@@ -16,6 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="TripleSix.Core" Version="5.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="WebApi\" />
   </ItemGroup>
 </Project>
