--- a/Src/Sample.Common/Sample.Common.csproj
+++ b/Src/Sample.Common/Sample.Common.csproj
@@ -1,13 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+    
+  <ItemGroup>
     <ProjectReference Include="..\TripleSix.Core\TripleSix.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="ReDoc.html" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="Config\**" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
+  
 </Project>
