--- a/Src/Sample.WebApi/Properties/launchSettings.json
+++ b/Src/Sample.WebApi/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Sample": {
+    "Sample.WebApi": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local"
