--- a/Src/TripleSix.AutoAdmin/TripleSix.AutoAdmin.csproj
+++ b/Src/TripleSix.AutoAdmin/TripleSix.AutoAdmin.csproj
@@ -1,4 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 
@@ -19,4 +20,5 @@
     <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="TripleSix.Core" Version="5.0.3" />
   </ItemGroup>
+  
 </Project>
