--- a/Src/Sample.Common/Config/appsettings.json
+++ b/Src/Sample.Common/Config/appsettings.json
@@ -8,5 +8,9 @@
 
   "Swagger": {
     "Enable": true
+  },
+
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Username=postgres;Password=postgres;Database=sample"
   }
 }
