--- a/Src/TripleSix.Core/TripleSix.Core.csproj
+++ b/Src/TripleSix.Core/TripleSix.Core.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <PackageId>TripleSix.Core</PackageId>
-    <Version>5.0.17</Version>
+    <Version>5.0.18</Version>
     <Authors>triplesix0209@gmail.com</Authors>
   </PropertyGroup>
 
@@ -22,6 +22,7 @@
     <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
     <PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="5.0.0" />
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="libphonenumber-csharp" Version="8.12.38" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.13" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="5.0.27" />
