--- a/Src/Sample.WebAdmin/.vscode/settings.json
+++ b/Src/Sample.WebAdmin/.vscode/settings.json
@@ -1,13 +1,23 @@
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        ".gitignore": true,
-        ".vscode": true
-    },
-    "explorerExclude.backup": null
+	"editor.formatOnSave": true,
+	"editor.codeActionsOnSave": { "source.fixAll": true },
+
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/CVS": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		".gitignore": true,
+		".vscode": true,
+		"node_modules": true,
+		".eslintignore": true,
+		".eslintrc.js": true,
+		".prettierrc": true,
+		"babel.config.js": true,
+		"package-lock.json": true,
+		"vue.config.js": true
+	},
+	"explorerExclude.backup": null
 }
