--- a/Src/Sample.WebAdmin/.env
+++ b/Src/Sample.WebAdmin/.env
@@ -1,1 +1,5 @@
 VUE_APP_NAME=Admin
+
+VUE_APP_API_IDENTITY=https://api.barmy.triplesix.cptech.vn
+VUE_APP_API_STATIC=https://api.static.triplesix.cptech.vn
+VUE_APP_API_ADMINS={"api":"https://api.barmy.triplesix.cptech.vn/admin"}
