--- a/Src/Sample.WebAdmin/package.json
+++ b/Src/Sample.WebAdmin/package.json
@@ -10,7 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.21.1",
+    "jose": "^4.5.1",
+    "material-design-icons-iconfont": "^6.4.2",
+    "moment-timezone": "^0.5.34",
+    "string-template": "^1.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.3",
