--- a/Src/Sample.WebAdmin/package.json
+++ b/Src/Sample.WebAdmin/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.3",
+    "vuetify-confirm": "^2.0.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
