--- a/Src/Sample.WebAdmin/.env
+++ b/Src/Sample.WebAdmin/.env
@@ -2,4 +2,4 @@ VUE_APP_NAME=Admin
 
 VUE_APP_API_IDENTITY=https://api.barmy.triplesix.cptech.vn
 VUE_APP_API_STATIC=https://api.static.triplesix.cptech.vn
-VUE_APP_API_ADMINS={"api":"https://api.barmy.triplesix.cptech.vn/admin"}
+VUE_APP_API_ADMINS={"api":"https://api.barmy.triplesix.cptech.vn"}
