--- a/Src/Sample.WebAdmin/package.json
+++ b/Src/Sample.WebAdmin/package.json
@@ -17,7 +17,9 @@
     "moment-timezone": "^0.5.34",
     "string-template": "^1.0.0",
     "vue": "^2.6.14",
+    "vue-numeral-filter": "^2.2.0",
     "vue-router": "^3.5.3",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.6.3",
     "vuetify-confirm": "^2.0.6",
     "vuex": "^3.6.2"
