--- a/Src/Sample.WebAdmin/package.json
+++ b/Src/Sample.WebAdmin/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.26.0",
     "core-js": "^3.21.1",
     "jose": "^4.5.1",
+    "luxon": "^1.28.0",
     "material-design-icons-iconfont": "^6.4.2",
     "moment-timezone": "^0.5.34",
     "string-template": "^1.0.0",
     "vue": "^2.6.14",
+    "vue-datetime": "^1.0.0-beta.14",
+    "vue-moment": "^4.1.0",
     "vue-numeral-filter": "^2.2.0",
     "vue-router": "^3.5.3",
     "vue-toastification": "^1.7.14",
