--- a/Src/Sample.WebAdmin/package.json
+++ b/Src/Sample.WebAdmin/package.json
@@ -18,6 +18,7 @@
     "moment-timezone": "^0.5.34",
     "string-template": "^1.0.0",
     "vue": "^2.6.14",
+    "vue-cool-lightbox": "^2.7.4",
     "vue-datetime": "^1.0.0-beta.14",
     "vue-moment": "^4.1.0",
     "vue-numeral-filter": "^2.2.0",
