--- a/Src/Sample.WebAdmin/.env
+++ b/Src/Sample.WebAdmin/.env
@@ -1,7 +1,7 @@
 VUE_APP_NAME=Admin
 
-VUE_APP_API_IDENTITY=https://api.barmy.triplesix.cptech.vn
+VUE_APP_API_IDENTITY=http://localhost:5000
 VUE_APP_API_STATIC=https://api.static.triplesix.cptech.vn
-VUE_APP_API_ADMINS={"api":"https://api.barmy.triplesix.cptech.vn"}
+VUE_APP_API_ADMINS={"api":"http://localhost:5000"}
 
 VUE_APP_API_STATIC_KEY=JM2HB70DOD74F9O66PHP
