--- a/Src/Sample.WebAdmin/package.json
+++ b/Src/Sample.WebAdmin/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^33.0.0",
+    "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "axios": "^0.26.0",
     "core-js": "^3.21.1",
     "jose": "^4.5.1",
