--- a/Src/Sample.Common/Config/appsettings.json
+++ b/Src/Sample.Common/Config/appsettings.json
@@ -11,7 +11,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Host=localhost;Username=postgres;Password=postgres;Database=sample"
+    "Default": "Host=10.39.93.47;Username=postgres;Password=postgres;Database=sample"
   },
 
   "Identity": {
