--- a/.editorconfig
+++ b/.editorconfig
@@ -53,3 +53,6 @@ dotnet_diagnostic.SA1005.severity = silent
 
 # SA1512: Single-line comments should not be followed by blank line
 dotnet_diagnostic.SA1512.severity = silent
+
+# SA1011: Closing square brackets should be spaced correctly
+dotnet_diagnostic.SA1011.severity = none
