--- a/Src/Domain/Config/appsettings.json
+++ b/Src/Domain/Config/appsettings.json
@@ -9,5 +9,9 @@
 
   "ConnectionStrings": {
     "Default": "Host=10.39.93.47;Username=postgres;Password=postgres;Database=sample"
+  },
+
+  "Migration": {
+    "ApplyOnStartup": true
   }
 }
