--- a/Src/Domain/Config/appsettings.json
+++ b/Src/Domain/Config/appsettings.json
@@ -7,6 +7,10 @@
     }
   },
 
+  "WebApi": {
+    "DisplayUnexpectedException": true
+  },
+
   "ConnectionStrings": {
     "Default": "Host=10.39.93.47;Username=postgres;Password=postgres;Database=sample"
   },
