--- a/Src/Domain/Config/appsettings.json
+++ b/Src/Domain/Config/appsettings.json
@@ -12,10 +12,14 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Host=10.39.93.47;Username=postgres;Password=postgres;Database=sample"
+    "Default": "Host=10.39.93.47;Username=root;Password=root;Database=sample"
   },
 
   "Migration": {
     "ApplyOnStartup": true
+  },
+
+  "OpenTelemetry": {
+    "ServiceName": "Sample.WebApi"
   }
 }
