--- a/Src/Domain/Config/appsettings.json
+++ b/Src/Domain/Config/appsettings.json
@@ -20,6 +20,9 @@
   },
 
   "OpenTelemetry": {
-    "ServiceName": "Sample.WebApi"
+    "ServiceName": "Sample.WebApi",
+    "EnableConsoleExporter": true,
+    "EnableJaegerExporter": false,
+    "JaegerHost": "tracking.cptech.vn"
   }
 }
