--- a/Src/Domain/Config/appsettings.json
+++ b/Src/Domain/Config/appsettings.json
@@ -22,7 +22,7 @@
   "OpenTelemetry": {
     "ServiceName": "Sample.WebApi",
     "EnableConsoleExporter": true,
-    "EnableJaegerExporter": false,
+    "EnableJaegerExporter": true,
     "JaegerHost": "tracking.cptech.vn"
   }
 }
