--- a/Src/Domain/Config/appsettings.json
+++ b/Src/Domain/Config/appsettings.json
@@ -21,7 +21,7 @@
 
   "OpenTelemetry": {
     "ServiceName": "Sample.WebApi",
-    "EnableConsoleExporter": true,
+    "EnableConsoleExporter": false,
     "EnableJaegerExporter": true,
     "JaegerHost": "tracking.cptech.vn"
   }
