--- a/Core/TripleSix.Core/TripleSix.Core.csproj
+++ b/Core/TripleSix.Core/TripleSix.Core.csproj
@@ -40,5 +40,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.3.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Identity\Controllers\" />
+  </ItemGroup>
   
 </Project>
