--- a/Core/TripleSix.Core/TripleSix.Core.csproj
+++ b/Core/TripleSix.Core/TripleSix.Core.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.3.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
   </ItemGroup>
   
 </Project>
