--- a/Src/Domain/Domain.csproj
+++ b/Src/Domain/Domain.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
       
   <ItemGroup>
-    <Content Include="Config\**" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="Appsettings\**" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
