--- a/Core/TripleSix.Core/TripleSix.Core.csproj
+++ b/Core/TripleSix.Core/TripleSix.Core.csproj
@@ -44,5 +44,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.3.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="AutoAdmin\Services\" />
+  </ItemGroup>
   
 </Project>
