--- a/Sample/Application/Config/appsettings.json
+++ b/Sample/Application/Config/appsettings.json
@@ -12,7 +12,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": "server=localhost;uid=root;pwd=root;database=sample"
+    "Default": ""
   },
 
   "Migration": {
