--- a/Sample/Domain/Appsettings/appsettings.json
+++ b/Sample/Domain/Appsettings/appsettings.json
@@ -12,7 +12,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Data Source=118.69.205.71; User ID=dmcl.dev; Password = DMCLDev@#23; Initial Catalog=Sample; Integrated Security=False; Connect Timeout = 150; Encrypt = False; TrustServerCertificate = True;"
   },
 
   "Migration": {
