--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>TripleSix.Core</RootNamespace>
     <AssemblyName>TripleSix.Core</AssemblyName>
     <PackageId>TripleSix.Core</PackageId>
-    <Version>7.1.35</Version>
+    <Version>7.1.36</Version>
     <Authors>triplesix0209@gmail.com</Authors>
 
     <TargetFramework>net7.0</TargetFramework>
@@ -15,6 +15,14 @@
   <PropertyGroup>
     <OutputPath>dist</OutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="ReDoc.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="ReDoc.html" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
