--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,14 +6,11 @@
     <PackageId>TripleSix.Core</PackageId>
     <Version>7.1.38</Version>
     <Authors>triplesix0209@gmail.com</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <OutputPath>dist</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
