--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,50 +1,82 @@
-name: Nuget
+name: Publish Nuget
 
 on:
-  create:
-    branches: 
-      - release/**
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+    push:
+        branches:
+        - master
+    pull_request:
+        branches:
+        - master
+    release:
+        types:
+        - published
 
-jobs:
-  build:
-    env:
-      BUILD_CONFIG: Release
-      SOLUTION: TripleSixCore.sln
+env:
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+    DOTNET_NOLOGO: true
+    NuGetDirectory: ${{ github.workspace }}/nuget
 
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Get Build Version
-        run: |
-          Import-Module .\Build\GetBuildVersion.psm1
-          Write-Host $Env:GITHUB_REF
-          $version = GetBuildVersion -VersionString $Env:GITHUB_REF
-          echo "BUILD_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+defaults:
+    run:
         shell: pwsh
 
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.2
+jobs:
+    create-nuget:
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
 
-      - name: Restore dependencies
-        run: nuget restore $SOLUTION
+        - name: Setup .NET
+          uses: actions/setup-dotnet@v3
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 7.x
+        - name: Pack package
+          run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
+  
+        - uses: actions/upload-artifact@v3
+          with:
+            name: nuget
+            if-no-files-found: error
+            retention-days: 7
+            path: ${{ env.NuGetDirectory }}/*.nupkg
 
-      - name: Build
-        run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
+    validate_nuget:
+        runs-on: ubuntu-latest
+        needs:
+        - create-nuget
+        steps:
+        - name: Setup .NET
+          uses: actions/setup-dotnet@v3
 
-      - name: Publish
-        if: startsWith(github.ref, 'refs/heads/release')
-        run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
+        - name: Download package
+          uses: actions/download-artifact@v3
+          with:
+            name: nuget
+            path: ${{ env.NuGetDirectory }}
+
+        - name: Install nuget validator
+          run: dotnet tool update Meziantou.Framework.NuGetPackageValidation.Tool --global
+      
+        - name: Validate package
+          run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NuGetDirectory }}/*.nupkg")
+
+    deploy:
+        if: github.event_name == 'release'
+        runs-on: ubuntu-latest
+        needs:
+        - validate-nuget
+        steps:
+        - uses: actions/download-artifact@v3
+          with:
+              name: nuget
+              path: ${{ env.NuGetDirectory }}
+
+        - name: Setup .NET Core
+          uses: actions/setup-dotnet@v3
+
+        - name: Publish NuGet package
+          run: |
+            foreach($file in (Get-ChildItem "${{ env.NuGetDirectory }}" -Recurse -Include *.nupkg)) {
+                dotnet nuget push $file --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
+            }
