--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -5,78 +5,33 @@ on:
         branches:
         - master
     pull_request:
+        types:
+        - closed
         branches:
         - master
-    release:
-        types:
-        - published
 
 env:
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-    DOTNET_NOLOGO: true
-    NuGetDirectory: ${{ github.workspace }}/nuget
-
-defaults:
-    run:
-        shell: pwsh
-
+    PACK_PROJECT: Core
+    
 jobs:
-    create-nuget:
+    build:
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/checkout@v3
+        - name: Checkout
+          uses: actions/checkout@v3
           with:
             fetch-depth: 0
 
         - name: Setup .NET
-          uses: actions/setup-dotnet@v3
+          uses: actions/setup-dotnet@v1
 
-        - name: Pack package
-          run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
-  
-        - uses: actions/upload-artifact@v3
-          with:
-            name: nuget
-            if-no-files-found: error
-            retention-days: 7
-            path: ${{ env.NuGetDirectory }}/*.nupkg
-
-    validate-nuget:
-        runs-on: ubuntu-latest
-        needs:
-        - create-nuget
-        steps:
-        - name: Setup .NET
-          uses: actions/setup-dotnet@v3
-
-        - name: Download package
-          uses: actions/download-artifact@v3
-          with:
-            name: nuget
-            path: ${{ env.NuGetDirectory }}
-
-        - name: Install nuget validator
-          run: dotnet tool update Meziantou.Framework.NuGetPackageValidation.Tool --global
-      
-        - name: Validate package
-          run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NuGetDirectory }}/*.nupkg")
-
+        - name: Pack NuGet package
+          run: dotnet pack ${{ env.PACK_PROJECT }} --configuration Release --output out
+            
     deploy:
-        if: github.event_name == 'release'
         runs-on: ubuntu-latest
         needs:
-        - validate-nuget
+        - build
         steps:
-        - uses: actions/download-artifact@v3
-          with:
-              name: nuget
-              path: ${{ env.NuGetDirectory }}
-
-        - name: Setup .NET Core
-          uses: actions/setup-dotnet@v3
-
         - name: Publish NuGet package
-          run: |
-            foreach($file in (Get-ChildItem "${{ env.NuGetDirectory }}" -Recurse -Include *.nupkg)) {
-                dotnet nuget push $file --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
-            }
+          run: dotnet nuget push ./<project>/out/*.nupkg --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
