--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -29,4 +29,4 @@ jobs:
           run: dotnet pack ${{ env.PACK_PROJECT }} --configuration Release --output out
 
         - name: Publish NuGet package
-          run: dotnet nuget push ./out/*.nupkg --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
+          run: dotnet nuget push ./out/*.nupkg --api-key "${{ secrets.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
