--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -11,6 +11,7 @@
     <PackageId>TripleSix.Core</PackageId>
     <Version>7.1.41-alpha</Version>
     <Authors>triplesix0209@gmail.com</Authors>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
