--- a/Src/TripleSix.Core/TripleSix.Core.csproj
+++ b/Src/TripleSix.Core/TripleSix.Core.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <PackageId>TripleSix.Core</PackageId>
-    <Version>5.0.55-test</Version>
+    <Version>5.0.55</Version>
     <Authors>triplesix0209@gmail.com</Authors>
   </PropertyGroup>
 
