--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -37,6 +37,8 @@
 		<PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="6.0.4" />
 		<PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.11.0" />
 		<PackageReference Include="FluentValidation" Version="11.8.0" />
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.6" />
+		<PackageReference Include="Hangfire.Core" Version="1.8.6" />
 		<PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="7.1.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.12" />
