--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -9,7 +9,7 @@
 		<Nullable>enable</Nullable>
 
 		<PackageId>TripleSix.Core</PackageId>
-		<Version>7.3.16</Version>
+		<Version>7.4.0-beta-1</Version>
 		<Authors>triplesix0209@gmail.com</Authors>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
