--- a/Src/TripleSix.CoreOld/TripleSix.CoreOld.csproj
+++ b/Src/TripleSix.CoreOld/TripleSix.CoreOld.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 
-		<PackageId>TripleSix.CoreOld.Old</PackageId>
+		<PackageId>TripleSix.CoreOld</PackageId>
 		<Version>5.0.55</Version>
 		<Authors>triplesix0209@gmail.com</Authors>
 	</PropertyGroup>
