--- a/Sample/Domain/Appsettings/appsettings.json
+++ b/Sample/Domain/Appsettings/appsettings.json
@@ -8,7 +8,8 @@
   },
 
   "WebApi": {
-    "ShowStackTrace": true
+    "ShowStackTrace": true,
+    "AllowedOrigins": [ "http://localhost:3000" ,"http://localhost:3001" ]
   },
 
   "ConnectionStrings": {
