--- a/Sample/Domain/Appsettings/appsettings.json
+++ b/Sample/Domain/Appsettings/appsettings.json
@@ -21,6 +21,7 @@
   },
 
   "Identity": {
+    "SigningKeyMode": "Dynamic",
     "Issuer": [ "IDENTITY" ],
     "ConnectionString": "Data Source=118.69.205.71;User ID=dmcl.dev;Password=DMCLDev@#23;Initial Catalog=Identity;Trust Server Certificate=True;"
   },
