--- a/Sample/Domain/Appsettings/appsettings.json
+++ b/Sample/Domain/Appsettings/appsettings.json
@@ -21,8 +21,9 @@
   },
 
   "Identity": {
+    "ValidateIssuer": false,
     "SigningKeyMode": "Dynamic",
-    "Issuer": [ "IDENTITY" ],
+    "Issuer": "IDENTITY",
     "ConnectionString": "Data Source=118.69.205.71;User ID=dmcl.dev;Password=DMCLDev@#23;Initial Catalog=Identity;Trust Server Certificate=True;",
     "BypassUserIds": [ "80bf4eea-a36d-49bb-14ba-08dbd57e5c23" ]
   },
