--- a/Sample/Domain/Appsettings/appsettings.json
+++ b/Sample/Domain/Appsettings/appsettings.json
@@ -8,8 +8,7 @@
   },
 
   "WebApi": {
-    "ShowStackTrace": true,
-    "AllowedOrigins": [ "http://localhost:3000", "http://localhost:3001" ]
+    "ShowStackTrace": true
   },
 
   "ConnectionStrings": {
@@ -29,11 +28,17 @@
   },
 
   "Hangfire": {
-    "Enable": true,
+    "Enable": false,
     "ConnectionString": "Data Source=118.69.205.71;User ID=dmcl.dev;Password=DMCLDev@#23;Initial Catalog=Hangfire;Trust Server Certificate=True;",
     "Queues": [ "sample" ],
     "Dashboard": {
       "Enable": true
     }
+  },
+
+  "OpenTelemetry": {
+    "Enable": true,
+    "ServiceName": "Sample",
+    "Host": "http://jaeger.lab.dienmaycholon.vn:16443"
   }
 }
