--- a/Sample/Domain/Appsettings/appsettings.json
+++ b/Sample/Domain/Appsettings/appsettings.json
@@ -28,7 +28,7 @@
   },
 
   "Hangfire": {
-    "Enable": false,
+    "Enable": true,
     "ConnectionString": "Data Source=118.69.205.71;User ID=dmcl.dev;Password=DMCLDev@#23;Initial Catalog=Hangfire;Trust Server Certificate=True;",
     "Queues": [ "sample" ],
     "Dashboard": {
