--- a/Sample/WebApi/WebApi.csproj
+++ b/Sample/WebApi/WebApi.csproj
@@ -4,9 +4,11 @@
 		<RootNamespace>Sample.WebApi</RootNamespace>
 		<AssemblyName>Sample.WebApi</AssemblyName>
 
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+
+		<CheckEolTargetFramework>false</CheckEolTargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
